--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@ h1{
   border-radius: 5px;
 
 }
+.expenses{
+  background-color: lightgreen;
+  list-style: none;
+  margin: 20px;
+  width: 300px;
+  height: 70px;
+}
