--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,13 @@ h1{
 
 }
 .expenses{
-  background-color: lightgreen;
+  background-color: red;
   list-style: none;
   margin: 20px;
   width: 300px;
   height: 70px;
+}
+h3{
+  padding: 5px;
+  margin-left: 15px;
 }
